# LightHostModern

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  changelog-01.md  documentation.md
Source/: AudioEngine.cpp  AudioEngine.h  DebugLog.cpp  DebugLog.h  HostIpcServer.cpp  HostIpcServer.h  HostStartup.cpp  IconMenu.cpp  IconMenu.hpp  LightHostController.cpp  LightHostController.h  PluginWindow.cpp  PluginWindow.h  RealtimeHostProcessor.cpp  RealtimeHostProcessor.h
Utilities/: Build Release.ps1  Build Windows.ps1  Reset Settings.bat
WinUI/: LightHost.WinUI.sln  Register-WinUIPackage.ps1
WinUI/LightHost.WinUI/: App.xaml  App.xaml.cpp  App.xaml.h  LightHost.WinUI.vcxproj  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  WinUIDebug.cpp  WinUIDebug.h  app.manifest  packages.config  pch.h
